# writer-reader-metadata

./: CMakeLists.txt  LICENSE  README.md  handler.cpp  imgui.ini  main.cpp  reader.cpp  wreader
